updating fetch file

--- a/jstests/fetch-async-await.html
+++ b/jstests/fetch-async-await.html
@@ -6,7 +6,7 @@
     <title>Fetch</title>
 </head>
 <body>
-    <h1>Fetch, async/await and eventemitter</h1>
+    <h1>Fetch, async/await</h1>
 
     <script>
         //Open on localhost 
